5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1643_2447.log
== TEST (2019-04-15 15:59:32) 
-- CODE:
preco=float(input('preco:'))
pagamento=float(input('pagamento:'))
if(preco>pagamento):
	men= 'falta'
	cont=(preco-pagamento)
else:
	men='troco de'
	cont=(pagamento-preco)
print(men,round(cont,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:00:22) 
-- CODE:
preco=float(input('preco:'))
pagamento=float(input('pagamento:'))
if(preco>pagamento):
	men= 'falta'
	cont=(preco-pagamento)
else:
	men='troco de'
	cont=(pagamento-preco)
print(men,round(cont,2))
-- EXECUTION TIME:
0.153411
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:01:46) 
-- CODE:
preco=float(input('preco:'))
pagamento=float(input('pagamento:'))
if(preco>pagamento):
	mensagem= 'falta'
	cont=(preco-pagamento)
else:
	mensagem='troco de'
	cont=(pagamento-preco)
print(men,round(cont, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(men,round(cont, 2))
NameError: name 'men' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:02:22) 
-- CODE:
preco=float(input('preco:'))
pagamento=float(input('pagamento:'))
if(preco>pagamento):
	mensagem= 'falta'
	cont=(preco-pagamento)
else:
	mensagem='troco de'
	cont=(pagamento-preco)
print(mensagem,round(cont, 2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:03:11) 
-- CODE:
preco=float(input('preco:'))
pagamento=float(input('pagamento:'))
if(preco>pagamento):
	mensagem= 'falta'
	cont=(preco-pagamento)
else:
	mensagem='troco de'
	cont=(pagamento-preco)
print(mensagem,round(cont, 2))
-- EXECUTION TIME:
0.201167
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:04:03) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men= "falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:04:06) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men= "falta"
	cont=(preco-pagamento)
else:
	men="troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))
-- EXECUTION TIME:
0.138314
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:04:40) 
-- CODE:
preco=float(input("preco:"))
pagamento=float(input("pagamento:"))
if(preco>pagamento):
	men= "Falta"
	cont=(preco-pagamento)
else:
	men="Troco de"
	cont=(pagamento-preco)
print(men,round(cont, 2))
-- EXECUTION TIME:
0.143134
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
